# ChangeLog for sys-power/upower
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-power/upower/ChangeLog,v 1.69 2012/01/16 21:05:33 ssuominen Exp $

  16 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> -upower-0.9.12.ebuild,
  -upower-0.9.14.ebuild:
  old

  16 Jan 2012; Mark Loeser <halcy0n@gentoo.org> upower-0.9.13-r1.ebuild:
  Stable for ppc/ppc64; bug #385233

*upower-0.9.15 (05 Dec 2011)

  05 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> +upower-0.9.15.ebuild:
  Version bump.

  23 Oct 2011; Raúl Porcel <armin76@gentoo.org> upower-0.9.13-r1.ebuild:
  alpha/ia64/sparc stable wrt #385233

  14 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> -upower-0.9.13.ebuild:
  old

  10 Oct 2011; Markus Meier <maekke@gentoo.org> upower-0.9.13-r1.ebuild:
  arm stable, bug #385233

  05 Oct 2011; Tony Vroon <chainsaw@gentoo.org> upower-0.9.13-r1.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo & Ian
  "idella4" Delaney in bug #385233.

  04 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> upower-0.9.13-r1.ebuild:
  x86 stable wrt bug #385233

*upower-0.9.14 (04 Oct 2011)

  04 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> +upower-0.9.14.ebuild:
  Version bump.

  15 Sep 2011; Samuli Suominen <ssuominen@gentoo.org> upower-0.9.13-r1.ebuild:
  Remove obsolete blockers.

*upower-0.9.13-r1 (15 Sep 2011)

  15 Sep 2011; Samuli Suominen <ssuominen@gentoo.org> +upower-0.9.13-r1.ebuild:
  keepdir /var/lib/upower wrt #383091 by Marcin Mirosław

*upower-0.9.13 (08 Sep 2011)

  08 Sep 2011; Samuli Suominen <ssuominen@gentoo.org> +upower-0.9.13.ebuild:
  Version bump.

  08 Sep 2011; Samuli Suominen <ssuominen@gentoo.org> -upower-0.9.8.ebuild,
  -upower-0.9.9.ebuild, -upower-0.9.11.ebuild, -upower-0.9.11-r1.ebuild:
  remove old

  24 Jul 2011; Raúl Porcel <armin76@gentoo.org> upower-0.9.12.ebuild:
  alpha/ia64/sparc stable wrt #374683
