@@ -3,18 +3,20 @@ Hash: SHA1
 
 DIST upower-0.9.13.tar.xz 403428 RMD160 de18b3f4bf85199824cf8faecc833d674a47eeb1 SHA1 48efb4a15bafef876d708992ec8168d4438179d7 SHA256 2c7dd2c26d11da628d68111d50eed51244a8337c1d0830addecd1372a7d44a22
 DIST upower-0.9.15.tar.xz 404444 RMD160 04223791db0730bd5480c22c7bf4ba2bc37d8a30 SHA1 565d9944c1ca01b4dd4eb9325bca81838799965f SHA256 d5941480f32dcee47401b3f650485c71f70e7eb0d92537bf4b62410248a6238c
+DIST upower-0.9.16.tar.xz 401948 RMD160 b3587dc2072722b60b0411027cfee9ed99dddd6d SHA1 be935f1c327b6561211e65a1025406171d674421 SHA256 eb9a3d39a8cb62970fd612e333bc7a43437ab0e7890303578b0a7e3c67c8c212
 EBUILD upower-0.9.13-r1.ebuild 2111 RMD160 a6e2d6289fdb887178ec1938b60d08a262223b28 SHA1 112dec042faa9e89b5ee7a3200eb9321f68e3823 SHA256 4eb507f1b2578370aafd1d10c33f078ad8ad6c19556798ffc04319c12eb4913f
 EBUILD upower-0.9.15.ebuild 1932 RMD160 3f2d3dffb026c1c89a2b827180a47682a70a7346 SHA1 28839d55ec259f080195bc6b778d5f83ace059e9 SHA256 e8c87eb1555217d2260cd1b401d50bf7e0272a0380d6facf7924d8ce287e449e
-MISC ChangeLog 8705 RMD160 eb3a918dbab20ea69f43359dc04fdf17e4f7d2c0 SHA1 bb2ca6faf9c510a58a26b8046b909b9196e424f0 SHA256 dcafdda5085ea576da526316c8fb111fa0fd4f13d4874ed4fe01ee61868586a9
+EBUILD upower-0.9.16.ebuild 1969 RMD160 d315216886056010ac3805cdcfff9beda00c2eb7 SHA1 d5741cde314e33ec3a875bf56eccd5505cb9a611 SHA256 bc1d6c60adf3c0099bae3158214dba2954a421f531c325ee8d1950513b099671
+MISC ChangeLog 8829 RMD160 f894b224d5ffa3af62758c0e4a530f6915e10913 SHA1 dc8e5695b60ac06264aa2131a5780ebc440ee881 SHA256 37a225401b13338c57b819c0e141ba6e6be0e82f6e71428e4eb66ab459eaebfa
 MISC metadata.xml 363 RMD160 7210445bae10f2ddf76edaa8e7144227a03c5de1 SHA1 76f5af45c1a11584d24878ee65e6773757cfa014 SHA256 b24b22d2e371b3ee7165cd9ae1ca6fac72aee10e107c192a4e94686ba95b9093
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPFJCzAAoJEEdUh39IaPFNgFgH/2EXi62wb8XTa5iJpis5BW8s
-9RJJorArNpbHFpFvmRAsIyUvjrxASKnN8np4LEGptSAV3UZECCqc95lA4o2gzirg
-JwBOn0k//8iew5moWi9yUw1FtIsgobPvnUaGsZkCsiIoGu0sx2QN7oKFnmn6hE/h
-9wrkmNWjICR0aWGjUy6a3vTGGxkKJsqv13w3UG3Ostbu+pSVPtXKXYg4kpX1jIP2
-iONU/NVHro4C1WCtiKFHmQ8UG0uQMQwKp7hmFxkVZqLxpWnZDLtuPcHqHN1FmFte
-XafVCYukAKf7A4fr8B6bevICEiqKGO5EXRHuFQPa2GK3xlTwDBlYLdBlAF/LKFU=
-=TuK8
+iQEcBAEBAgAGBQJPoBYwAAoJEEdUh39IaPFN1LoIAILBIRStep8unexwu6NmcqKP
++Y6kKgr4kYyPrvbn4yJxIOKa4knqkyCsoaTEeG4ZqYyooNJagWqoZ8UXXDHlmb0T
+IyqF6QFOywE5b1SdM8JPGmwTzJcMsTN3UMRkiYBTfGVBsXzBYDgYT3qtH5BH6T8/
+ViI6KCPzjWbKMV7kGJFWhmu1dnT2VFTBbGzXk+eJ2uWQp6C6n9EcxhJstDqkl4k8
+kTAPOCtR1oWTwOGI3HLM0RPKqwARMYxEyJSmK6q5qnhaevGuQaPq2YT9EJEpiLWM
+MNz7rPUcz1tBWtRYJhSaeYjkk0be3izmHmQTqsBCtnncPh7XeI6l5IbX0lgXSKk=
+=LSxG
 -----END PGP SIGNATURE-----
