@@ -1,6 +1,11 @@
 # ChangeLog for sys-power/upower
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-power/upower/ChangeLog,v 1.69 2012/01/16 21:05:33 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-power/upower/ChangeLog,v 1.70 2012/05/01 17:00:34 ssuominen Exp $
+
+*upower-0.9.16 (01 May 2012)
+
+  01 May 2012; Samuli Suominen <ssuominen@gentoo.org> +upower-0.9.16.ebuild:
+  Version bump.
 
   16 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> -upower-0.9.12.ebuild,
   -upower-0.9.14.ebuild:
